@@ -624,6 +624,10 @@ string V3Options::getenvMAKE() { return V3Os::getenvStr("MAKE", "gmake"); }
 string V3Options::getenvMAKE() { return V3Os::getenvStr("MAKE", "make"); }
 #endif
 
+string V3Options::getenvMAKEFLAGS() {  //
+    return V3Os::getenvStr("MAKEFLAGS", "");
+}
+
 string V3Options::getenvPERL() {  //
     return V3Os::getenvStr("PERL", "perl");
 }
